# alter

./: Cargo.toml  DOCTRINA  conf
.github/: README.md
man/: alter.1
src/: cambios.rs  conf.rs  config.rs  copia.rs  lib.rs  main.rs  opciones.rs  recorrido.rs  var.rs
