[package]
name = "disco"
version = "0.1.0"
authors = ["Pablo Fernández Serrano <pablofs02@tutanota.com>"]
edition = "2021"
description = "Analizador de texto"
readme = "./quehacer"
repository = "https://github.com/pablofs02/servidor/"
license = "GPL-3.0-or-later"
keywords = ["minimalista", "rust", "libre", "linux"]
categories = []
publish = false

[profile.release]
opt-level = 'z'
debug = false
split-debuginfo = 'off'
strip = 'none'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
