[package]
name = "discus"
version = "0.1.0"
authors = ["Pablo Fernández Serrano <pablofs02@tutanota.com>"]
edition = "2021"
description = "Gestor de copias de seguridad"
readme = "DOCTRINA"
repository = "https://github.com/pablofs02/servidor/"
license = "GPL-3.0-or-later"
keywords = ["minimalista", "rust", "libre", "linux"]
categories = []
publish = false
